OO-3645: fix query to get attempts for the reminders rules